# oioi

./: .dockerignore  .gitignore  CLAUDE_GO.md  CLAUDE_PY.md  COMPARISON_REPORT.md  FEATURES_COMPLETE.md  MIGRATION_COMPLETE.md
backend-python/: .env.example  .gitignore  API_RESPONSE_STANDARD.md  API_STANDARDS.md  COMPLETION_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE_REPORT.md  README.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
backend-python/app/core/: __init__.py  config.py  database.py  exception_handlers.py  exceptions.py  response.py  security.py
backend-python/app/middlewares/: rate_limit.py
backend-python/app/models/: __init__.py  ai_config.py  asset.py  character_library.py  drama.py  frame_prompt.py  image_generation.py  task.py  timeline.py  video_generation.py  video_merge.py
backend-python/app/schemas/: __init__.py  ai_config.py  character_library.py  common.py  drama.py  image_generation.py  task.py  video_generation.py
backend-python/app/services/: __init__.py  ai_base.py  ai_doubao.py  ai_factory.py  ai_openai.py  character_library_service.py  ffmpeg_service.py  frame_prompt_service.py  image_service.py  resource_transfer_service.py  script_generation_service.py  storyboard_service.py  task_service.py  video_merge_service.py  video_service.py
backend-python/app/utils/: __init__.py  file.py  logger.py  video.py
backend-python/requirements/: prod.txt
backend-python/src/: config.py  database.py  exception_handlers.py  exceptions.py  main.py  schemas.py
backend-python/src/ai_configs/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend-python/src/assets/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend-python/src/character_library/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  (+2 more)
backend-python/tests/: conftest.py
(+194 files in other folders)
